refactor(version): Migrate to Java 13